--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Inter&family=Open+Sans:ital,wght@0,800;1,400&family=Poppins:wght@300&display=swap");
 @font-face {
   font-family: "Visage Outline";
   src: url("../../public/assets/fonts/Visage-Outline.woff2") format("woff");
@@ -14,6 +15,7 @@ body {
   overflow-x: hidden;
   min-width: 100vw;
   min-height: 100vh;
+  margin: auto;
 }
 
 #hero {
@@ -21,67 +23,194 @@ body {
   flex-direction: column;
   justify-content: space-between;
   align-items: baseline;
-  width: 100vw;
-  margin: 0rem 0rem;
+  width: 96vw;
   gap: 0;
+  margin: 1rem auto;
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 300;
+  font-size: 0.75em;
+  line-height: 1em;
+  color: #dbdbdb;
 }
 #hero .header {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: baseline;
-  width: 100vw;
-  margin: 0rem 3rem;
+  width: 96vw;
   gap: 0;
+  margin: auto;
+  border-bottom: 1px rgba(255, 255, 255, 0.6) solid;
+  margin: auto;
 }
 #hero .header .hamburger-menu img {
-  height: 20px;
+  height: 2.6041666667vh;
 }
 #hero .nav-links {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: baseline;
-  width: "fit-content";
-  margin: 0rem 0rem;
-  gap: 3.5em;
+  width: fit-content;
+  gap: 5.1244509517vw;
+  margin: auto;
+}
+#hero .nav-links .single-link-selected {
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 300;
+  font-size: 1.0625em;
+  padding: 20px;
+  border-bottom: 6px #ffffff solid;
+  color: #dbdbdb;
+}
+#hero .nav-links .single-link {
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 300;
+  font-size: 1.0625em;
+  color: #dbdbdb;
+}
+#hero .desc {
+  display: flex;
+  flex-direction: row;
+  justify-content: start;
+  align-items: baseline;
+  width: 96vw;
+  gap: 0;
+  margin: auto;
 }
 #hero .desc p {
-  width: 40%;
+  width: 30vw;
+  font-weight: 300;
+  font-size: 0.75em;
+  line-height: 2.0833333333vh;
+  color: #dbdbdb;
+  font-weight: 300;
+  font-size: 12px;
+  line-height: 16px;
 }
 #hero .carousel {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  width: 113%;
-  margin: 0rem 0rem;
-  gap: 0;
-  margin-left: -4em;
+  width: 110vw;
+  gap: 16vw;
+  margin: auto;
+  max-height: 45vh;
 }
-#hero .carousel .menu-item .menu-image img {
+#hero .carousel .menu-image img {
   width: 19vw;
   filter: drop-shadow(0px 12px 3px rgba(0, 0, 0, 0.501961));
 }
-#hero .carousel .menu-item .menu-selected-image img {
-  width: 37.5vw;
+#hero .carousel .menu-selected-image img {
+  width: 31.5vw;
   filter: drop-shadow(0px 12px 3px rgba(0, 0, 0, 0.501961));
 }
-#hero .carousel .menu-item .menu-next-image img {
+#hero .carousel .menu-next-image {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: self-end;
+  width: fit-content;
+  gap: 0;
+  margin: auto;
+}
+#hero .carousel .menu-next-image .menu-next-image-container {
+  height: 0;
+}
+#hero .carousel .menu-next-image img {
   width: 21vw;
   filter: drop-shadow(0px 12px 3px rgba(0, 0, 0, 0.501961));
   z-index: 5;
 }
-#hero .carousel .menu-item .menu-next-image .menu-item-next-indicator {
-  font-size: 250px;
+#hero .carousel .menu-next-image .menu-item-next-indicator {
+  font-size: 23vw;
   font-family: "Visage Outline";
+  margin: 0;
+}
+#hero .menu-description .menu-item-subtitle {
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 1em;
+  line-height: 57px;
+  letter-spacing: 0.169em;
+  text-transform: uppercase;
+  color: #dbdbdb;
+}
+#hero .menu-description .menu-item-title {
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 5.125em;
+  margin: 0px 0px 2vw 0px;
+  text-transform: capitalize;
+  color: #dbdbdb;
 }
 #hero .bottom-element {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: baseline;
-  width: 100vw;
-  margin: 0rem 0rem;
+  width: 96vw;
   gap: 0;
+  margin: auto;
+}
+#hero .bottom-element .carousel-counter-container {
+  border-bottom: 1px rgba(255, 255, 255, 0.6) solid;
+  flex-grow: 2;
+}
+#hero .bottom-element .carousel-counter-container .carousel-counter {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: baseline;
+  width: fit-content;
+  gap: 1.756954612vw;
+  margin: 0;
+  border-bottom: 3px #ffffff solid;
+}
+#hero .bottom-element .carousel-counter-container .selected-bottom-indicator {
+  font-family: "Open Sans";
+  font-style: normal;
+  font-weight: 800;
+  font-size: 1.5em;
+  color: #dbdbdb;
+}
+#hero .bottom-element .carousel-counter-container .bottom-indicator {
+  font-family: "Open Sans";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 1em;
+  color: #dbdbdb;
+}
+#hero .bottom-element .carousel-nav {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: baseline;
+  width: fit-content;
+  gap: 1.1713030747vw;
+  margin: auto;
+}
+#hero .bottom-element .carousel-nav .carousel-nav-icon img {
+  height: 5.859375vh;
+  width: auto;
+}
+#hero .bottom-element .social-icons {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: row;
+  justify-content: end;
+  align-items: baseline;
+  width: fit-content;
+  gap: 2.196193265vw;
+  margin: auto;
+}
+#hero .bottom-element .social-icons img {
+  width: 3.074670571vw;
 }
