Finish implementing responsive

--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -10,6 +10,8 @@ $xsm: 375px;
 $xxsm: 300px;
 
 $white: #fff;
+$sub-white: #dbdbdb;
+$border-color: #ffffff99;
 $background: linear-gradient(
   to right,
   #f0362d 0%,
