--- a/src/pages/landing/hero/description.module.scss
+++ b/src/pages/landing/hero/description.module.scss
@@ -6,18 +6,20 @@
 #description {
   :global {
     div {
+      @include flex(column, $gap: 10px, $width: fit-content);
       .menu-item-subtitle {
+        @include scaleFont(16);
         font-family: $inter-regular;
-        font-size: convertToEm(16);
         line-height: 1;
         letter-spacing: 0.129em;
         text-transform: uppercase;
         color: $sub-white;
+        margin: 0;
       }
 
       .menu-item-title {
         font-family: $inter-regular;
-        font-size: vw(82px);
+        font-size: pxToVw(82);
         line-height: 1;
         text-transform: capitalize;
         color: $sub-white;
@@ -31,10 +33,10 @@
 
       @media screen and (max-width: $md) {
         .menu-item-subtitle {
-          font-size: convertToEm(10);
+          font-size: pxToEm(10);
         }
         .menu-item-title {
-          font-size: convertToEm(50);
+          font-size: pxToEm(50);
         }
       }
       @media screen and (max-width: $xsm) {
@@ -42,8 +44,7 @@
           font-size: convertToEm(10);
         }
         .menu-item-title {
-          font-size: convertToEm(25);
-          margin-bottom: 15px;
+          font-size: convertToEm(35);
         }
       }
     }
