--- a/src/pages/landing/hero/hero.module.scss
+++ b/src/pages/landing/hero/hero.module.scss
@@ -5,25 +5,37 @@
 
 #hero {
   :global {
-    @include flex(column);
+    @include flex(column, $gap: pxToVh(20), $width: 100vw);
+    overflow: clip;
     min-height: 100vh;
     font-family: $poppins-light;
     margin: auto;
     padding: 10px 0 10px 0;
-    .desc {
-      p {
-        max-width: 25.72%;
-        font-weight: 300;
-        font-size: convertToEm(12);
-        line-height: 1.3;
-        color: $sub-white;
-        line-height: 16px;
-      }
-    }
-    @media screen and (max-width: $sm) {
+    .main-section {
+      @include flex(column, $gap: pxToVh(77));
+      margin: auto;
       .desc {
         p {
-          max-width: 64.7vw;
+          @include scaleFont(16);
+          max-width: pxToVw(494);
+          font-weight: 300;
+          color: $sub-white;
+          line-height: 1.3;
+          margin: 0;
+        }
+      }
+    }
+    .footer {
+      @include flex(column, $gap: pxToVh(30));
+      margin: auto;
+    }
+
+    @media screen and (max-width: $lg) {
+      .main-section {
+        .desc {
+          p {
+            max-width: 64.7vw;
+          }
         }
       }
     }
